# interfaces-to

./: .env.default  .gitignore  CNAME  LICENSE  README.md  contributing.md  pyproject.toml  quickstart.ipynb
.github/workflows/: release.yaml
examples/cli/: cli.sh  input.txt  readme.md
examples/slackbot/: .env  readme.md  slackbot.py
examples/slackbot-ollama/: readme.md  slackbot-ollama.py
interfaces_to/: __init__.py  agent.py  bases.py  cli.py  utils.py
interfaces_to/messages/: __init__.py  cli.py  fastapi.py  gradio.py  ngrok.py  slack.py
interfaces_to/tools/: airtable.py  notion.py  openai.py  peopledatalabs.py  self.py  slack.py  system.py
