[tool.poetry]
name = "interfaces-to"
version = "0.2.10"
description = "The quickest way to make Large Language Models do things."
authors = ["Blair Hudson <blairhudson@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"

homepage = "https://interfaces.to"
repository = "https://github.com/interfaces-to/interfaces-to"
documentation = "https://interfaces.to/interfaces-to"

keywords = ["llm-agent", "openai"]
classifiers = ["Development Status :: 3 - Alpha", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3.10"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0" 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
