[tool.poetry]
name = "interfaces-to"
version = "0.2.30"
description = "The quickest way to make Large Language Models do things."
authors = ["Blair Hudson <blairhudson@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"

homepage = "https://interfaces.to"
repository = "https://github.com/interfaces-to/interfaces-to"
documentation = "https://interfaces.to/interfaces-to"

keywords = ["llm-agent", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10"
]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
docstring-parser = "^0.16"
requests = "^2.32.3"
pydantic = "^2.8.2"
packaging = "^24.1"
openai = ">=1.37.1"
slack-sdk = { version = "^3.31.0", optional = true }
notion-client = { version = ">=2.2.1", optional = true }
peopledatalabs = { version = ">=4.0.0", optional = true }
ngrok = { version = ">=1.4.0", optional = true }
fastapi = { version = ">=0.112.0", optional = true }
uvicorn = { version = ">=0.30.5", optional = true }
gradio = { version = ">=4.40.0", optional = true }
ipywidgets = { version = ">=8.1.3", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^7.0"
slack-sdk = "^3.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
into = "interfaces_to.cli:main"

[tool.poetry.extras]
slack = ["slack-sdk"]
openai = ["openai"]
notion = ["notion-client"]
peopledatalabs = ["peopledatalabs"]
ngrok = ["ngrok"]
fastapi = ["fastapi", "uvicorn"]
gradio = ["gradio", "ipywidgets"]
